2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/04_declare_avec_void.deca
// Description :
//     declarée une variable avce void  
// Resultats :
//    Erreur Contexteulle : fichier.deca:11:9:le type attendu doit étre différent de void
//
// Historique :
// cree le 01/01/2024


{
    void x ;
}